# backend-jwt-api

./: .env  .env.example  .gitignore  Cargo.toml
migrations/: 20260118063009_create_users_table.up.sql  20260127121526_add_image_to_users.down.sql  20260127121526_add_image_to_users.up.sql  20260202064529_create_documents_table.down.sql  20260202064529_create_documents_table.up.sql
src/: main.rs
src/config/: database.rs
src/handlers/: data_handler.rs  document_handler.rs  login_handler.rs  mod.rs  upload_handler.rs  user_handler.rs  websocket_handler.rs
src/handlers/auth_handler/: register_handler.rs
src/handlers/user_handler/: mod.rs  tests.rs  user_handler.rs
src/middlewares/: auth_middleware.rs
src/models/: user.rs
src/routes/: auth_routes.rs  document_routes.rs  mod.rs  user_routes.rs  websocket_routes.rs
src/schemas/: document_schema.rs  login_schema.rs  message_schema.rs  mod.rs  register_schema.rs  user_schema.rs
src/utils/: jwt.rs  password.rs  response.rs
tests/: README.md
