[package]
name = "backend-api-jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["multipart", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha1 = "0.10.6"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
